--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
 </head>
 
 <body>
-    The birth of the croissant itself—that is, its adaptation from the plainer form of kipferl, before the invention of
-    viennoiseries—can be dated to at least 1839 (some say 1838) when an Austrian artillery officer, August Zang, founded
-    a
-    Viennese bakery ("Boulangerie Viennoise") at 92, rue de Richelieu in Paris.
 
-    <a href="/contact.html">Contact</a>
-    <a href="/photo.html">Photo</a>
+    <div class="descr">
+        <h4>Croissant</h4>
+        The birth of the croissant itself—that is, its adaptation from the plainer form of kipferl, before the
+        invention of
+        viennoiseries—can be dated to at least 1839 (some say 1838) when an Austrian artillery officer, August Zang,
+        founded
+        a
+        Viennese bakery ("Boulangerie Viennoise") at 92, rue de Richelieu in Paris.
+    </div>
+
+    <div class="links"><a href="/contact.html">Contact</a>
+        <a href="/photo.html">Photo</a>
+    </div>
 </body>
 
 </html>
