--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,19 @@
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    Croissant
-    <a href="/photo.html">Photo</a>
-    <a href="/">Homepage</a>
+    <div class="descr">
+        <h4>Croissant</h4>
+        <a class="email" href="mailto:vitaliia.savchyn.muc@gmail.com">Send an email</a>
+    </div>
+    <div class="links"><a href="/photo.html">Photo</a>
+        <a href="/">Homepage</a>
+    </div>
 </body>
 
 </html>
