--- a/photo.html
+++ b/photo.html
@@ -7,14 +7,20 @@
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    Croissant
-
-    <a href="/contact.html">Contact</a>
-    <a href="/">Homepage</a>
+    <div class="descr">
+        <h4>Croissant</h4>
+        mmm...
+    </div>
     <img src="/img/croissant.jpeg" alt="">
+    <div class="links"><a href="/contact.html">Contact</a>
+        <a href="/">Homepage</a>
+    </div>
 </body>
 
 
