SEO friendly changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Croissant</title>
     <meta charset="UTF-8" />
+    <meta name="description" content="Croissant history">
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
@@ -13,13 +14,16 @@
 <body>
 
     <div class="descr">
-        <h4>Croissant</h4>
+        <h1>Croissant History</h1>
         The birth of the croissant itself—that is, its adaptation from the plainer form of kipferl, before the
         invention of
         viennoiseries—can be dated to at least 1839 (some say 1838) when an Austrian artillery officer, August Zang,
         founded
         a
         Viennese bakery ("Boulangerie Viennoise") at 92, rue de Richelieu in Paris.
+        <a href="https://cooking.nytimes.com/recipes/1022053-croissants" title="Croissant recipe" class="href"
+            target=”_blank”>Learn more about
+            Croissants.</a>
     </div>
 
     <div class="links"><a href="/contact.html">Contact</a>
