--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
 <head>
     <title>Croissant</title>
     <meta charset="UTF-8" />
+    <meta name="description" content="Croissant history">
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
@@ -14,10 +15,10 @@
 
 <body>
     <div class="descr">
-        <h4>Croissant</h4>
+        <h1>Croissant History</h1>
         mmm...
     </div>
-    <img src="/img/croissant.jpeg" alt="">
+    <img src="/img/croissant.jpeg" alt="Croissant">
     <div class="links"><a href="/contact.html">Contact</a>
         <a href="/">Homepage</a>
     </div>
